<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layaoutPublicarDuda"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PublicarDudaActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <TextView
            android:id="@+id/textViewPublicarDuda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tituloPublicarDuda"
            android:textColor="@color/primary"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.054" />

        <TextView
            android:id="@+id/textViewTextExplicativo"
            android:layout_width="370dp"
            android:layout_height="54dp"
            android:ems="10"
            android:minHeight="48dp"
            android:text="@string/textoExplicativoPublicarPrueba"
            android:textColor="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPublicarDuda"
            app:layout_constraintVertical_bias="0.044" />

        <EditText
            android:id="@+id/editTextTituloDudaNueva"
            android:layout_width="370dp"
            android:layout_height="51dp"
            android:background="@drawable/rounded_corners_publicarduda"
            android:ems="10"
            android:hint="@string/tituloDudaNueva"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColorHint="@color/text_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTextExplicativo"
            app:layout_constraintVertical_bias="0.035" />

        <EditText
            android:id="@+id/editTextDuda"
            android:layout_width="368dp"
            android:layout_height="156dp"
            android:background="@drawable/rounded_corners_publicarduda"
            android:ems="10"
            android:hint="@string/descripción"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAlignment="textStart"
            android:textColorHint="@color/text_gray"
            android:textDirection="ltr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTextExplicativo"
            app:layout_constraintVertical_bias="0.257" />

        <Spinner
            android:id="@+id/spinnerAsignaturas"
            android:layout_width="366dp"
            android:layout_height="37dp"
            android:entries="@array/asignaturas_array"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.355"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDuda"
            app:layout_constraintVertical_bias="0.288" />

        <ImageButton
            android:id="@+id/imageButtonAdjuntar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:background="@color/white"
            android:enabled="true"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerAsignaturas"
            app:layout_constraintVertical_bias="0.49"
            app:srcCompat="@drawable/imagen_clip" />

        <TextView
            android:id="@+id/textViewAdjuntar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adjuntar"
            android:textColor="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.056"
            app:layout_constraintStart_toEndOf="@+id/imageButtonAdjuntar"
            app:layout_constraintTop_toBottomOf="@+id/spinnerAsignaturas"
            app:layout_constraintVertical_bias="0.179" />

        <Button
            android:id="@+id/buttonpublicar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_boton"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/roboto"
            android:text="@string/publicar"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonAdjuntar" />

        <TextView
            android:id="@+id/textViewAsignatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tituloAsignatura"
            android:textColor="@color/primary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.069"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDuda"
            app:layout_constraintVertical_bias="0.103" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="90dp"
        app:menu="@menu/navigation_menu"
        app:itemActiveIndicatorStyle="@style/Theme.Material3.DynamicColors.DayNight"
        android:background="@drawable/rounded_corners_navigation"
        app:itemIconSize="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>