<resources>
    <string name="app_name">HelpMe</string>
    <string name="home_day_calendar">Lunes</string>
    <string name="date_custom">17 OCT 2022</string>
    <string name="nueva_duda">Nueva duda</string>
    <string name="ver_todas">Ver todas</string>
    <string name="ultimas_dudas_publicadas">Últimas dudas publicadas</string>
    <string name="back_button_toolbar">Volver a la página anterior</string>
    <string name="speech_text_back_button">Volver a la página anterior</string>
    <string name="resumen_ttitulo_duda">Algoritmo Quicksort Java</string>
    <string name="resumen_img_perfil_alumno_descripcion">Imagen de perfil del alumno</string>
...
    <string name="tituloPublicarDuda">Publicar una Duda</string>
    <string name="Título">Titulo</string>
    <string name="textoExplicativoPublicarPrueba">Recuerda que una duda ha de ser muy concreta y fácil de entender. Puedes aportar imágenes o código si lo necesitas.</string>
    <string name="tituloDudaNueva">Titulo</string>
    <string name="descripción">Descripción</string>
    <string name="adjuntar">Adjuntar imagen</string>
    <string name="publicar">Publicar</string>
    <string name="tituloAsignatura">Asignatura</string>
    <string name="dudaPublicada">Duda publicada</string>
    <string name="camposRellenados">Error: Campos incorrectos</string>
    <string name="login_email">Correo electrónico</string>
    <string name="contentDescription_logo">HelpMe es una aplicación para resolución de dudas y realizar tutorías entre alumnos</string>
    <string name="hint_psasword_login">Contraseña</string>
    <string name="hint_contraseña_login">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="crear_cuenta_login">Crear una cuenta</string>
    <string name="login_titulo">Inicio sesión</string>
    <string name="button_create_account">Crear una cuenta</string>
    <string name="create_account_login">¿Ya tienes una cuenta?</string>
    <string name="hint_uo">UOXXXXXX</string>
    <string name="hint_nombre_completo">Nombre Completo</string>
...
